# SWARM

./: .env.example  .gitignore  .prettierignore  .tool-versions  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/api/: config.py  deps.py  main.py
backend/api/routers/: decisions.py  internal.py  listings.py  pricing.py  sandbox.py  upload.py  verify.py  ws.py  ws_auth.py
backend/api/x402/: handler.py
backend/chain/: accounts.py  borsh.py  client.py  events.py  pdas.py
backend/indexer/: handlers.py  run.py
backend/jobs/: queue.py  tasks.py
backend/runtime/: vllm_client.py
backend/storage/: arweave.py  db.py  models.py
backend/tests/: test_health.py  test_indexer.py  test_pricing.py  test_ws_auth.py  test_x402.py
backend/workers/: run.py
buyer-agent/: .env.example  README.md  package.json  tsconfig.json
buyer-agent/src/: agent.ts  config.ts  index.ts  server.ts  types.ts
buyer-agent/src/arweave/: fetcher.ts
buyer-agent/src/narrator/: stdout.ts  tee.ts  ws_publisher.ts
buyer-agent/src/reasoning/: classifier.ts  decision.ts  evaluator.ts  llm_client.ts  probe_generator.ts
buyer-agent/src/runtime/: worker_client.ts
buyer-agent/src/solana/: client.ts  pdas.ts
buyer-agent/src/util/: crypto.ts
buyer-agent/src/x402/: client.ts
buyer-agent/tests/: classifier.test.ts  decision.test.ts  evaluator.test.ts
cli/: Cargo.toml
cli/src/: main.rs
docs/: 00_ARCHITECTURE.md  01_SOLANA_PROGRAM.md  02_BACKEND.md  03_TURBOQUANT_WORKER.md  04_FRONTEND.md  05_WEBSOCKET_DESIGN.md  06_BUYER_AGENT.md  README.md
frontend/: .env.local.example  next.config.ts  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agent/: page.tsx
frontend/app/browse/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/list/: page.tsx
frontend/components/listings/: ListingCard.tsx  ListingFilters.tsx  ListingGrid.tsx  SandboxModal.tsx
frontend/components/nav/: TopNav.tsx
frontend/components/shared/: EmptyState.tsx  HashDisplay.tsx  PubkeyDisplay.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx  Skeleton.tsx
frontend/components/wallet/: WalletButton.tsx
frontend/lib/: anchor-client.ts  api.ts  constants.ts  format.ts  x402-client.ts
frontend/lib/hooks/: useAgentStream.ts  (+3 more)
programs/agentvault/: Cargo.toml
programs/agentvault/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/agentvault/src/instructions/: anchor_decision.rs  buy_memory.rs  buy_sandbox_access.rs  delist_memory.rs  initialize_platform.rs  list_memory.rs  mod.rs  update_listing_price.rs
runbook/: .gitignore  README.md  VERDICT.md  env.sh  install.sh  lmcache.yaml  start.sh  start_tunnel.sh  start_vllm.sh  status.sh  stop.sh  test.sh
scripts/: deploy.sh  init-platform.ts  irys-sidecar.js  runpod_setup.sh  seed_listings.sh
shared/types/: package.json  tsconfig.json
tests/: agentvault.test.ts  package.json  tsconfig.json
worker/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  runpod_template.json
worker/benchmarks/: quality.py
worker/benchmarks/prompts/: eval_prompts.txt
worker/scripts/: e2e_md_pipeline.py
worker/tests/: test_compress.py  test_hadamard.py  test_qjl.py  test_quantizer.py  test_serde.py  test_server.py
worker/worker/: bench.py  main.py
worker/worker/runtime/: cache_loader.py  lmcache_serde.py  vllm_bridge.py
worker/worker/server/: auth.py  config.py  main.py
worker/worker/server/routes/: __init__.py  benchmark.py  compress.py  decompress.py  health.py  inference.py  load.py
worker/worker/turboquant/: __init__.py  compress.py  hadamard.py  qjl.py  quantizer.py  serde.py
worker/worker/turboquant/precomputed/: beta_levels.json
(+5 files in other folders)
