[project]
name = "agentvault-backend"
version = "0.1.0"
description = "AgentVault FastAPI backend, Solana indexer, and job runner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "websockets>=13.1",
    "python-multipart>=0.0.10",
    "python-jose[cryptography]>=3.3.0",
    "solders>=0.21.0",
    "anchorpy>=0.20.0",
    "base58>=2.1.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "pynacl>=1.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -p no:anchorpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "chain", "indexer", "jobs", "runtime", "storage", "workers"]
