[package]
name = "agentvault-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AgentVault seller CLI (avlt). Optional v2."

[[bin]]
name = "avlt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
