[package]
name = "agentvault-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AgentVault seller CLI (avlt)."

[[bin]]
name = "avlt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls", "stream", "multipart"] }
indicatif = "0.17"
