[project]
name = "agentvault-worker"
version = "0.1.0"
description = "TurboQuant KV-cache compression and inference worker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "safetensors>=0.4.5",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "scipy>=1.14.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.6.0",
    "lmcache>=0.2.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
benchmark = [
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "huggingface-hub>=0.26.0",
    "pandas>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
