[package]
name = "agentvault"
version = "0.1.0"
description = "AgentVault — on-chain registry, payments, and audit anchoring."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentvault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true }
